--- a/tic-tac-toe/CMakeLists.txt
+++ b/tic-tac-toe/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
-project(pyramide)
+project(tictactoe)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/target)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/target)
 
-add_executable(pyramide pyramide.c)
+add_executable(tictactoe tictactoe.c)
